# SQL-Schedule-Tracker

./: .gitignore  AUDIT_REPORT_2026.md  AUDIT_REPORT_IMPLEMENTATION_PLAN.md  CODEBASE_HEALTH_REPORT_2026-06-14.md  CODEBASE_HEALTH_REPORT_2026-06-15.md  CODEBASE_HEALTH_REPORT_2026-06-16.md  CODE_REVIEW.md  ORIGINAL_REQUEST.md  README-Windows.md  agents.md  build.bat  cleanup_detailers.bat  config.yaml  config.yaml.example  ensure_detailers.bat  main.py  migrate.bat  pyproject.toml  pyrightconfig.json  requirements.txt  run.bat  schedule.db.backup  setup.bat  setup.sh  tag_review.md  task_progress.md  test.bat
SQL-Schedule-Tracker/: README-Windows.md  ensure_detailers.bat  migrate.bat  run.bat  setup.bat  test.bat
automation/: analyze_detailers.py  cleanup_detailers.py  create_db.py  debug_parse.py  debug_parse2.py  debug_parse3.py  export_to_workbook.py  import_atomsvc.py  import_csv.py  import_preview  import_preview.py  migrate_workbook_to_sqlite.py  test_match.py<  test_parse.py  verify_cleanup.py
data/: db.py  loader.py  models.py  tag_parser.py  writer.py
docs/: COMPUTATION_AUDIT.md  DATA_CONTRACT.md  ONBOARDING_STEPS.md
gui/: a11y_dialog.py  alert_panel.py  audit_dialog.py  batch_edit_dialog.py  calendar_panel.py  close_progress_dialog.py  conflict_dialog.py  due_date_changed_dialog.py  edit_form.py  import_preview_dialog.py  inline_edit_bar.py  list_panel.py  loading_overlay.py  main_window.py  notification_panel.py  onboarding.py  pivot_chart.py  reference_dialog.py  sync_status.py  theme.py  timeline_panel.py
plans/: ARCH-001-service-layer.md  ARCH-002-state-management.md  ARCH-003-data-validation-layer.md  ARCH-004-plugin-system.md  BUSINESS-ROADMAP-2026.md  DEVOPS-001-ci-cd-pipeline.md  DEVOPS-004-hotreload-dev.md  FEAT-016-realtime-collaboration.md  FEAT-017-predictive-analytics.md  FEAT-018-gantt-chart-view.md  FEAT-020-rest-api.md  IMP-13-batch-operations.md  MOC-B-CHANGE-IMPACT-ANALYSIS.md  PERF-002-query-optimization.md  PERF-003-lazy-loading-cache.md  QA-001-property-based-testing.md  QA-003-fuzz-testing.md  QA-004-benchmark-regression.md  due-date-alerts.md  tag-parser-whitelist.md
scripts/: benchmark.py  doc_check.py  ensure_detailers.py  migrate_workbook_to_sqlite.py  pre-commit
services/: __init__.py  config_service.py  export_service.py  import_service.py  migration_registry.py  pre_save_hooks.py  sanitizer.py  sync_service.py  unit_service.py  validation.py
(+115 files in other folders)
